@@ -488,7 +488,7 @@
        <rect>
         <x>20</x>
         <y>121</y>
-        <width>151</width>
+        <width>161</width>
         <height>19</height>
        </rect>
       </property>
@@ -898,7 +898,7 @@ p, li { white-space: pre-wrap; }
       <rect>
        <x>30</x>
        <y>20</y>
-       <width>411</width>
+       <width>431</width>
        <height>41</height>
       </rect>
      </property>
@@ -998,7 +998,7 @@ p, li { white-space: pre-wrap; }
       <rect>
        <x>200</x>
        <y>101</y>
-       <width>71</width>
+       <width>81</width>
        <height>16</height>
       </rect>
      </property>
@@ -1069,7 +1069,7 @@ p, li { white-space: pre-wrap; }
        <rect>
         <x>10</x>
         <y>74</y>
-        <width>91</width>
+        <width>101</width>
         <height>20</height>
        </rect>
       </property>
@@ -1092,8 +1092,8 @@ p, li { white-space: pre-wrap; }
        <rect>
         <x>10</x>
         <y>118</y>
-        <width>52</width>
-        <height>15</height>
+        <width>71</width>
+        <height>16</height>
        </rect>
       </property>
       <property name="text">
@@ -1233,7 +1233,7 @@ p, li { white-space: pre-wrap; }
       <rect>
        <x>120</x>
        <y>190</y>
-       <width>221</width>
+       <width>251</width>
        <height>21</height>
       </rect>
      </property>
@@ -1251,7 +1251,7 @@ p, li { white-space: pre-wrap; }
       <rect>
        <x>20</x>
        <y>90</y>
-       <width>171</width>
+       <width>211</width>
        <height>21</height>
       </rect>
      </property>
@@ -1329,7 +1329,7 @@ p, li { white-space: pre-wrap; }
       <rect>
        <x>310</x>
        <y>90</y>
-       <width>131</width>
+       <width>161</width>
        <height>23</height>
       </rect>
      </property>
